prevents hyperlink for projects on mobile to allow for better hover functionality

--- a/css/style.css
+++ b/css/style.css
@@ -104,3 +104,7 @@ body {
   background-color: #fff;
   text-align: justify;
 }
+.non-mobile,
+.mobile-link{
+  display: none;
+}
